--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       rel="stylesheet"
     />
 
+    <!-- Font Awesome for store icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+
     <link rel="stylesheet" href="css/styles.css" />
   </head>
 
@@ -39,8 +45,52 @@
         </div>
       </div>
     </header>
-    <section class="hero"></section>
-    <section class="link"></section>
+    <section class="hero">
+      <div class="container columns">
+        <div class="left-col">
+          <!-- Left column: headline / description / CTA -->
+          <h1>DOWNLOAD APP, SAVE MONEY, MAKE FRIENDS!</h1>
+          <p class="description">
+            Its simple and its free. Play your part in reducing Carboon
+            Footprint and help Mother Nature to sustain its beauty. So what are
+            you waiting for? Let's ride together.
+          </p>
+          <div class="hero-buttons">
+            <button class="btn-primary" type="button">
+              <i class="fa-brands fa-app-store-ios" aria-hidden="true"></i
+              >DOWNLOAD
+            </button>
+            <button class="btn-secondary" type="button">
+              <i class="fa-brands fa-google-play" aria-hidden="true"></i
+              >DOWNLOAD
+            </button>
+          </div>
+        </div>
+        <div class="right-col">
+          <!-- Right column: image or secondary content -->
+          <img src="img/imagehero.png" alt="Tere app preview" />
+        </div>
+      </div>
+    </section>
+    <section class="link">
+      <div class="container link-container">
+        <p class="description">Let's go. Get a link to download the app.</p>
+        <form
+          class="signup-form"
+          action="#"
+          method="get"
+          onsubmit="return false;"
+        >
+          <input
+            type="text"
+            name="email"
+            placeholder="Enter your email"
+            aria-label="Email"
+          />
+          <button class="button" type="submit">APPLY TO DRIVE</button>
+        </form>
+      </div>
+    </section>
     <section class="how-it-works">
       <div class="container">
         <h2>How <span class="green">Tere</span> Works</h2>
